# WEB_HW13.2

./: author_.html  pyproject.toml
hw10/: pyproject.toml
hw10/quotes/: .gitignore  data_download.py  data_upload.py  manage.py
hw10/quotes/quotes/: settings.py  urls.py
hw10/quotes/quotesapp/: forms.py  models.py  urls.py  views.py
hw10/quotes/quotesapp/static/quotesapp/: style.css
hw10/quotes/quotesapp/templates/quotesapp/: base.html  index.html  quote.html
hw10/quotes/quotesapp/templatetags/: extract_tags.py
hw10/quotes/users/: forms.py  models.py  urls.py  views.py
hw10/quotes/users/migrations/: 0001_initial.py
hw10/quotes/users/templates/users/: password_reset.html  password_reset_done.html  signup.html
quotes/: .gitignore  mongo_models.py
quotes/quotes/: settings.py
quotes/quotesapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py  0002_alter_author_fullname_alter_quote_quote_and_more.py
quotes/quotesapp/static/quotesapp/: style.css
quotes/quotesapp/templates/quotesapp/: author.html  base.html  n_quote.html  tags_list.html
quotes/users/: urls.py  views.py
quotes/users/templates/users/: login.html  password_reset_complete.html  profile.html
