[tool.poetry]
name = "hw10"
version = "0.1.0"
description = ""
authors = ["olga-ivanko <o.ivanko@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2 = "^2.9.9"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"
pillow = "^10.2.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
